Chapter 3 -> First Version Compelte + Acronyms for thesis

--- a/1-FrontMatter/acronyms.tex
+++ b/1-FrontMatter/acronyms.tex
@@ -8,24 +8,7 @@
 
 \typeout{NT FILE acronyms.tex}%
 
-
-\newacronym{abbrev}{abbrev}{abbreviation of a longer text}
-\newacronym{aaa}{aaa}{acronym aaa}
-\newacronym{aab}{aab}{acronym aab}
-\newacronym{aba}{aba}{acronym aba}
-\newacronym{bbb}{bbb}{acronym bbb}
-\newacronym{xpt}{xpto}{and extension of a xpto xpto xpto xpto xpto xpto xpto xpto xpto xpto xpto xpto xpto xpto xpto xpto xpto xpto xpto}
-
-% \newacronym{novathesis}{\emph{novathesis}}{\emph{novathesis} template}
-%
-% \newacronym{novathesisclass}{\texttt{novathesis.cls}}{\texttt{novathesis.cls} class}
-
-
 \newacronym[sort=novathesis]{novathesis}{\novathesis}{NOVAthesis \LaTeX}
-
-\newacronym{LLM}{LLM}{Large Language Model}
-
-\newacronym{LLMs}{LLMs}{Large Language Models}
 
 \newacronym{novathesisclass}{novathesis.cls}{\novathesis\ class}
 
@@ -34,3 +17,16 @@
 \newacronym{FCT}{FCT}{NOVA School of Science and Technology}
 
 \newacronym{DI}{DI}{Department of Computer Science}
+
+\newacronym{LLM}{LLM}{Large Language Model}
+\newacronym{CI}{CI}{Continuous Integration}
+\newacronym{IDE}{IDE}{Integrated Development Environment}
+\newacronym{API}{API}{Application Programming Interface}
+\newacronym{AST}{AST}{Abstract Syntax Tree}
+\newacronym{ML}{ML}{Machine Learning}
+\newacronym{DL}{DL}{Deep Learning}
+\newacronym{NLP}{NLP}{Natural Language Processing}
+
+\newacronym{PR}{PR}{Pull Request}
+\newacronym{CR}{CR}{Code Review}
+\newacronym{Diff}{Diff}{Diferença de código entre versões (\textit{diff})}
