--- a/3-BackMatter/appendix2.tex
+++ b/3-BackMatter/appendix2.tex
@@ -9,20 +9,4 @@
 \typeout{NT FILE appendix2.tex}%
 
 
-\chapter{Appendix 2 Lorem Ipsum}
-\label{app:lorem_ipsum2}
-
-This is a test with citing something~\cite{ecoop12-dias} in the appendix.
-
-\begin{newpdflayout}{210mm}{297mm}%{420mm}
-
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-
-\lipsum[1-9]
-
-BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
-\end{newpdflayout}
-
-CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
-
-\lipsum[1-10]
+\chapter{Appendix 2 Lorem Ipsum}\label{app:lorem_ipsum2}
